# src/app/api/year/[yearId]/class/route.ts
@@ -1,0 +1,2 @@
+export { GetClassYear as GET } from '@/controllers'
+export { CreateClass as POST } from '@/controllers'
